# zero2prod

./: .env.example  .tmuxinator.yml  Cargo.toml  LICENSE  README.md  configuration.toml
.cargo/: config.toml
.github/workflows/: general.yml
docs/: chapter-01.md  chapter-03.md  chapter-04.md
migrations/: 20240116182421_create_subscription_table.sql
scripts/: init_db
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
