[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

# The double [[]] indicates we are working with an array
# A project may only have a single library, but multiple binaries
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.4.1"
tokio = { version = "1.35.1", features = ['macros', 'rt-multi-thread'] }

[dev-dependencies]
reqwest = "0.11.23"
