[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

# The double [[]] indicates we are working with an array
# A project may only have a single library, but multiple binaries
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.4.1"
tokio = { version = "1.35.1", features = ['macros', 'rt-multi-thread'] }
serde = { version = "1.0.195", features = ['derive'] }
config = "0.13.4"

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
  "runtime-tokio", # use tokio runtime
  "macros",        # enable sqlx macros
  "postgres",      # unlock Postgres functionality
  "uuid",          # add support for mapping uuids
  "chrono",        # add support for mapping timestamptz to Datetime<T>
  # provide access to migration functions used by sqlx-cli - will be
  # used in migrations
  "migrate",
]

[dev-dependencies]
reqwest = "0.11.23"
